# configmanager

./: .travis.yml  Gopkg.toml  LICENSE  Makefile  README.md  client.go  client_test.go
cmd/configsample/: main.go
configmap/: configmap.go  configmap_test.go
logger/: logger.go
model/: BUILD.bazel  dummy.go  model.go  model_test.go
testutil/: call_counter.go  call_counter_test.go  temp_file.go
